# Swaram-v0.0.1-b

./: .eslintrc.cjs  index.html  package.json  pill.html  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src/: App.tsx  dictation.ts  index.css  index.tsx  pill.css  pill.tsx  shortcuts.ts
src-tauri/: Cargo.toml  build.rs  fallback_models.json  tauri.conf.json  test_whisper.rs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  download.rs  lib.rs  models_registry.rs  tracker.rs
src-tauri/src/commands/: audio.rs  config.rs  crud_commands.rs  dictation.rs  dictionary.rs  hardware.rs  history.rs  mod.rs  models.rs  modes.rs  snippets.rs  tones.rs
src-tauri/src/system/: active_window.rs  audio_feedback.rs  dictation.rs  llm_post_process.rs  mod.rs  shortcuts.rs  system_specs.rs  text_filters.rs  text_inserter.rs  tray.rs  window_region.rs
src-tauri/src/system/transcriber/: engine.rs  mod.rs  python_engine.rs  sherpa_engine.rs  whisper_engine.rs
src-tauri/src/window/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src/components/: GenericConfigTab.tsx  SettingsModal.tsx  SharedStyles.tsx  TabBar.tsx
src/components/Button/: Button.interface.ts  index.tsx
src/components/Pill/: Pill.tsx
src/components/Pill/components/: MainPill.tsx
src/components/Pill/modals/: AiSettingsModal.tsx  ModalWrapper.tsx  ModelSelectionModal.tsx  SnippetsModal.tsx
src/components/TitleBar/: index.tsx
src/data/: carousel.json  default_modes.json  default_tones.json  models.json  settings.json  tabs.json
src/pages/: DashboardTab.tsx  DictionaryTab.tsx  ModelsTab.tsx  ModesTab.tsx  SnippetsTab.tsx  TonesTab.tsx
src/utils/: os.ts
test/: App.test.tsx  setup.ts
