[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13.3", features = ["stream", "json"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs", "macros"] }
futures-util = "0.3.32"
dirs = "6.0.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-single-instance = "2.4.2"
wgpu = "0.20.1"
whisper-rs = "0.16.0"
cpal = "0.17.3"
window-vibrancy = "0.7.1"
sysinfo = "0.30"
tauri-plugin-global-shortcut = "2.3.1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
