[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-log             = "2.8.0"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-global-shortcut = "2.3.1"
serde              = { version = "1",      features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1.52.3", features = ["rt-multi-thread", "fs", "macros", "time"] }
rusqlite           = { version = "0.39.0", features = ["bundled"] }
futures-util       = "0.3.32"
dirs               = "6.0.0"
wgpu               = "0.20.1"
whisper-rs         = "0.16.0"
cpal               = "0.17.3"
window-vibrancy    = "0.7.1"
sysinfo            = "0.30"
anyhow             = "1"
tracing            = "0.1"
dashmap            = "6"
once_cell          = "1.20.2"
enigo              = "0.6.1"
ringbuf            = "0.5.0"
hound              = "3.5.1"
rfd                = "0.14"
arboard            = { version = "3.6.1", features = ["wayland-data-control"] }
windows-icons      = "0.3.0"
tauri-plugin-shell = "2"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
strsim = "0.11.0"
natural = "0.5.0"
regex = "1.11.1"
sherpa-rs = "0.6.8"
silero_vad = "0.1.0"

# ── Linux ────────────────────────────────────────────────────────────────────
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["all-extensions"] }

# ── Windows ──────────────────────────────────────────────────────────────────
[target.'cfg(target_os = "windows")'.dependencies.windows]
version  = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.dev]
debug-assertions = false
